Still not working

--- a/WinterAdventurer/Components/Pages/Home.razor
+++ b/WinterAdventurer/Components/Pages/Home.razor
@@ -75,7 +75,11 @@
     {
         try
         {
-            var renderer = new PdfDocumentRenderer();
+            var renderer = new PdfDocumentRenderer()
+            {
+                Document = excelUtilities.CreatePdf()
+            };
+
             renderer.Document = excelUtilities.CreatePdf();
             renderer.RenderDocument();
 
