--- a/WinterAdventurer/Components/Routes.razor
+++ b/WinterAdventurer/Components/Routes.razor
@@ -1,3 +1,11 @@
+@using MudBlazor
+@rendermode InteractiveServer
+
+<MudThemeProvider/>
+<MudPopoverProvider/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
+
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
