fix: remove unused example pages

--- a/WinterAdventurer/Components/Layout/NavMenu.razor
+++ b/WinterAdventurer/Components/Layout/NavMenu.razor
@@ -1,13 +1,7 @@
-﻿@using MudBlazor;
+@using MudBlazor;
 
 <MudNavMenu>
     <MudNavLink class="nav-link" href="" Match="NavLinkMatch.All">
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-    </MudNavLink>
-    <MudNavLink class="nav-link" href="counter">
-        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-    </MudNavLink>
-    <MudNavLink class="nav-link" href="weather">
-        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
     </MudNavLink>
 </MudNavMenu>
