Add initial animations

--- a/WinterAdventurer/Components/App.razor
+++ b/WinterAdventurer/Components/App.razor
@@ -21,6 +21,7 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.4.0/dist/driver.css" />
     <link rel="stylesheet" href="css/tour.css" />
+    <link rel="stylesheet" href="css/animations.css" />
     <HeadOutlet />
 </head>
 
